syntax = "proto2";

package remoting.apis.v1;

import "duration.proto";

option optimize_for = LITE_RUNTIME;

// Defines the UX and capabilities for a Chrome OS enterprise session.
// Next ID: 7
message ChromeOsEnterpriseOptions {
  // Indicates whether the admin troubleshooting tools are enabled by policy.
  // This flag is used to indicate whether to show the troubleshooting options
  // or a message indicating how to enable the feature. This value is ignored
  // if |show_troubleshooting_tools| is false.
  optional bool allow_troubleshooting_tools = 1;

  // Indicates whether to show the admin troubleshooting tools in the client UI.
  optional bool show_troubleshooting_tools = 4;

  // Indicates whether the client should attempt to reconnect if the connection
  // is dropped.
  optional bool allow_reconnections = 2;

  // Indicates whether to show the file transfer section in the client UI.
  optional bool allow_file_transfer = 3;

  // Indicates whether a connection dialog will be shown on the Chrome OS host
  // machine to allow a local user to accept or reject the connection.
  optional bool connection_dialog_required = 5;

  // Indicates the amount of time before the connection will be auto-accepted.
  optional Duration connection_auto_accept_timeout = 6;
}
